--- a/index.html
+++ b/index.html
@@ -13,12 +13,26 @@
 
     <div class="card logo-card">
         <img src="gtp-logo.png" alt="Green Turtle Production Logo" class="logo-img">
+        <img src="nas-logo.png" alt="National Art School Logo" class="logo-img">
     </div>
 
-    <div class="card">
-        <div class="artist-text">
-            <h2>Adam Cullen</h2>
-            <h3>Between Two Worlds</h3>
+    <div class="card intro-text">
+        <p>Green Turtle Production is proud to present a collection of documentaries celebrating the lives and work of three iconic Australian artists.</p>
+        <p>Each film is a time capsule, offering students a rare glimpse into the creative processes that shaped our country's artistic landscape. As a valuable teaching tool, they aim to spark classroom discussion and deepen the understanding of Australia's cultural history.</p>
+        <p>We invite you to explore these important stories below.</p>
+    </div>
+
+    <div class="card artist-card">
+        <div class="artist-header">
+            <div class="artist-title">
+                <h2>Adam Cullen</h2>
+                <h3>Between Two Worlds</h3>
+            </div>
+            <div class="artist-photo">
+                <img src="cullen.png" alt="Portrait of Adam Cullen">
+            </div>
+        </div>
+        <div class="artist-body">
             <p>
                 Contemporary grunge artist Adam Cullen, found fame in the year 2000 for his portrait of actor, David Wenham, the winner of the prestigious Archibald portrait prize. Adam talks about his art and life by breaking down shapes, imagery and colour on canvas and the meaning behind his strong and bold images. Interviews with Adam's father Kevin Cullen and arts writer and mentor Ken McGregor give further insight. Documented over a five year period "Between Two Worlds" is useful as a teaching tool and also for library use. Narrated by Marcus Graham.
             </p>
@@ -28,19 +42,21 @@
                 Featuring Renato Vacirca on percussion<br>
                 Extra composition by Carmen O'Brien on violin
             </p>
-            <div class="trailer-and-photo-section">
-                <a href="https://youtu.be/5WdwJyCm7ho?si=VKog-VSQvzgI6kK0" target="_blank">Watch Trailer</a>
-                <div class="artist-photo">
-                    <img src="cullen.png" alt="Portrait of Adam Cullen">
-                </div>
-            </div>
+            <a href="https://youtu.be/5WdwJyCm7ho?si=VKog-VSQvzgI6kK0" target="_blank">Watch Trailer</a>
         </div>
     </div>
 
-    <div class="card">
-        <div class="artist-text">
-            <h2>Charles Blackman</h2>
-            <h3>An Imprint in Time</h3>
+    <div class="card artist-card">
+        <div class="artist-header">
+            <div class="artist-title">
+                <h2>Charles Blackman</h2>
+                <h3>An Imprint in Time</h3>
+            </div>
+            <div class="artist-photo">
+                <img src="blackman.png" alt="Portrait of Charles Blackman">
+            </div>
+        </div>
+        <div class="artist-body">
             <p>
                 Charles Blackman was a modern Australian painter. His work spans over six decades. In the documentary Charles talks about his art in his own words, about his imagery and his process and practice along with members of his family and contemporary fellow painters; David Boyd, John Coburn, Judy Cassab. Over a five year period, Charles was interviewed and discusses key periods throughout his life. "An Imprint In Time" is a great time capsule of Australian art history and would be useful as a teaching tool and also for library use. Narrated by Miranda Otto.
             </p>
@@ -49,19 +65,21 @@
                 Music composed by Ross Johnston<br>
                 Bear and the raven song by Bertie Blackman
             </p>
-            <div class="trailer-and-photo-section">
-                <a href="https://youtu.be/8vfKLy35CnA?si=8vJpdaoSlsuBmG1l" target="_blank">Watch Trailer</a>
-                <div class="artist-photo">
-                    <img src="blackman.png" alt="Portrait of Charles Blackman">
-                </div>
-            </div>
+            <a href="https://youtu.be/8vfKLy35CnA?si=8vJpdaoSlsuBmG1l" target="_blank">Watch Trailer</a>
         </div>
     </div>
 
-    <div class="card">
-        <div class="artist-text">
-            <h2>John Coburn</h2>
-            <h3>A Sacred Landscape</h3>
+    <div class="card artist-card">
+        <div class="artist-header">
+            <div class="artist-title">
+                <h2>John Coburn</h2>
+                <h3>A Sacred Landscape</h3>
+            </div>
+            <div class="artist-photo">
+                <img src="coburn.png" alt="Portrait of John Coburn">
+            </div>
+        </div>
+        <div class="artist-body">
             <p>
                 John Coburn is one of the fathers of abstract painting in Australia. He started painting in Queensland during the mid-1950s floating his bold colourful shapes on canvas and tapestry throughout his life. In this film John talks about art and his life and the process of his practice. His family and mentor Stuart Perves add to the richness of his story. John Coburn has made an important mark on the development of abstract art in Australia. The documentary is narrated by Kamahl, singer and longtime friend. "A Sacred Landscape" would be great as a teaching tool and also for library use. John Coburn was interviewed over 4 years.
             </p>
@@ -70,18 +88,14 @@
                 Music composed by Jim Moginie and Wayne Goodwin<br>
                 Music arrangement by Justin Ossher
             </p>
-            <div class="trailer-and-photo-section">
-                <a href="https://youtu.be/_rwgX0oTBHc?si=CwtidBTr350UJEDE" target="_blank">Watch Trailer</a>
-                <div class="artist-photo">
-                    <img src="coburn.png" alt="Portrait of John Coburn">
-                </div>
-            </div>
+            <a href="https://youtu.be/_rwgX0oTBHc?si=CwtidBTr350UJEDE" target="_blank">Watch Trailer</a>
         </div>
     </div>
 
-    <div class="card logo-card">
-        <img src="nas-logo.png" alt="National Art School Logo" class="logo-img">
-    </div>
+    <!-- Footer Section with the Live Website Link -->
+    <footer class="footer">
+        <a href="https://greenturtleproductions.com.au" target="_blank">Visit Green Turtle Production for more information</a>
+    </footer>
 
 </body>
 </html>
