Add John Coburn artist page and print-optimized resource generator
- Added John Coburn artist detail page completing Series 01
- Created professional resource generator with print optimization
- Added tab navigation for Years 9-10 and 11-12 worksheets
- Updated teacher pack links to point to correct pages

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                             <div class="cta-group">
                                 <a href="https://youtu.be/_rwgX0oTBHc?si=CwtidBTr350UJEDE" target="_blank" class="btn-primary">Watch Trailer</a>
-                                <a href="teacher-pack.html" class="btn-secondary">View Teacher Pack</a>
+                                <a href="john-coburn.html" class="btn-secondary">View Teacher Pack</a>
                             </div>
                             
                             <div class="curriculum-section">
