Add Charles Blackman print-optimized resource generator
- Created Charles Blackman resource page matching Adam Cullen structure
- Added Stage 5 Symbols & Storytelling worksheet
- Added Stage 6 Subjective Frame & Interiority worksheet
- Updated download link on Charles Blackman artist page
- Print-optimized with proper page breaks and white background

--- a/charles-blackman.html
+++ b/charles-blackman.html
@@ -463,7 +463,7 @@
                 <li>Practical Workshop: 'Painting the Poem' - Exploring Literary Allusion</li>
                 <li>Visual Analysis Worksheets for the 'Schoolgirl' and 'Alice' Series</li>
             </ul>
-            <a href="#" class="btn-download">
+            <a href="charles-blackman-resources.html" class="btn-download">
                 <span class="download-icon">📄</span>
                 Download Syllabus Guide (PDF)
             </a>
