Add John Coburn print-optimized resource generator completing Series 01
- Created John Coburn resource page matching Cullen and Blackman structure
- Added Stage 5 Abstraction & Radiant Design worksheet
- Added Stage 6 Structural Frame & Spiritual Geometry worksheet
- Updated download link on John Coburn artist page
- Print-optimized with proper page breaks and white background
- Series 01 resource collection now complete

--- a/john-coburn.html
+++ b/john-coburn.html
@@ -463,7 +463,7 @@
                 <li>Practical Workshop: 'Organic Abstraction' - Building Symbols from Nature</li>
                 <li>Public Commissions: Analysing the Sydney Opera House Curtains</li>
             </ul>
-            <a href="#" class="btn-download">
+            <a href="john-coburn-resources.html" class="btn-download">
                 <span class="download-icon">📄</span>
                 Download Syllabus Guide (PDF)
             </a>
