Improve text contrast on all resource pages for better readability

--- a/john-coburn-resources.html
+++ b/john-coburn-resources.html
@@ -452,7 +452,7 @@
             <div class="cover-artist">John Coburn – The Geometry of Spirit</div>
             
             <div style="max-width: 600px; margin: 0 auto; text-align: left;">
-                <p style="font-family: 'Inter', sans-serif; font-size: 16px; margin-bottom: 32px; color: #24292E;">
+                <p style="font-family: 'Inter', sans-serif; font-size: 16px; margin-bottom: 32px; color: #000000; font-weight: 500; line-height: 1.8;">
                     This resource pack is designed to support teachers delivering Stage 5 (Years 9-10) and Stage 6 (Years 11-12) Visual Arts curriculum. All materials align with the NSW Syllabus and can be adapted for VCE and QCE contexts.
                 </p>
 
