--- a/resource-generator.html
+++ b/resource-generator.html
@@ -391,7 +391,7 @@
             <div class="cover-artist">Adam Cullen</div>
             
             <div style="max-width: 600px; margin: 0 auto; text-align: left;">
-                <p style="font-family: 'Inter', sans-serif; font-size: 16px; margin-bottom: 32px;">
+                <p style="font-family: 'Inter', sans-serif; font-size: 16px; margin-bottom: 32px; color: #000000; font-weight: 500; line-height: 1.8;">
                     This resource pack is designed to support teachers delivering Stage 5 (Years 9-10) and Stage 6 (Years 11-12) Visual Arts curriculum. All materials align with the NSW Syllabus and can be adapted for VCE and QCE contexts.
                 </p>
 
