--- a/john-coburn-resources.html
+++ b/john-coburn-resources.html
@@ -136,25 +136,25 @@
 
         .btn-print {
             display: inline-block;
-            padding: 16px 40px;
-            background-color: #E07A2F;
-            color: #FFFFFF;
+            padding: 14px 28px;
+            background-color: #CC7722;
+            color: #2F353B;
             text-decoration: none;
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
-            font-size: 16px;
-            text-transform: uppercase;
-            letter-spacing: 0.05em;
+            font-size: 1rem;
             border-radius: 4px;
-            border: none;
-            cursor: pointer;
+            text-align: center;
             transition: all 0.3s ease;
+            border: 1px solid #CC7722;
+            cursor: pointer;
         }
 
         .btn-print:hover {
-            background-color: #C86926;
+            background-color: #2F353B;
+            color: #CC7722;
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(224, 122, 47, 0.3);
+            box-shadow: 0 4px 12px rgba(204, 119, 34, 0.3);
         }
 
         /* Section Styles */
