--- a/teacher-pack.html
+++ b/teacher-pack.html
@@ -103,44 +103,45 @@
 
         .btn-watch-trailer {
             display: inline-block;
-            padding: 16px 32px;
-            background-color: #E07A2F;
-            color: #FFFFFF;
+            padding: 14px 28px;
+            background-color: #CC7722;
+            color: #2F353B;
             text-decoration: none;
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
             font-size: 1rem;
             border-radius: 4px;
-            text-transform: uppercase;
-            letter-spacing: 0.05em;
+            text-align: center;
             transition: all 0.3s ease;
+            border: 1px solid #CC7722;
         }
 
         .btn-watch-trailer:hover {
-            background-color: #C86926;
+            background-color: #2F353B;
+            color: #CC7722;
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(224, 122, 47, 0.4);
+            box-shadow: 0 4px 12px rgba(204, 119, 34, 0.3);
         }
 
         .btn-purchase {
             display: inline-block;
-            padding: 16px 32px;
-            background-color: transparent;
-            color: #E07A2F;
+            padding: 14px 28px;
+            color: #E6E6E6;
             text-decoration: none;
             font-family: 'Montserrat', sans-serif;
-            font-weight: 700;
+            font-weight: 500;
             font-size: 1rem;
-            border: 2px solid #E07A2F;
             border-radius: 4px;
-            text-transform: uppercase;
-            letter-spacing: 0.05em;
+            text-align: center;
             transition: all 0.3s ease;
+            border: 1px solid rgba(204, 119, 34, 0.3);
+            background-color: transparent;
         }
 
         .btn-purchase:hover {
-            background-color: rgba(224, 122, 47, 0.1);
-            transform: translateY(-2px);
+            color: #CC7722;
+            border-color: #CC7722;
+            background-color: rgba(204, 119, 34, 0.05);
         }
 
         /* Curriculum & Metadata Section */
@@ -268,23 +269,24 @@
             display: inline-flex;
             align-items: center;
             gap: 12px;
-            padding: 18px 40px;
-            background-color: #E07A2F;
-            color: #FFFFFF;
+            padding: 14px 28px;
+            background-color: #CC7722;
+            color: #2F353B;
             text-decoration: none;
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
-            font-size: 1.1rem;
+            font-size: 1rem;
             border-radius: 4px;
-            text-transform: uppercase;
-            letter-spacing: 0.05em;
+            text-align: center;
             transition: all 0.3s ease;
+            border: 1px solid #CC7722;
         }
 
         .btn-download:hover {
-            background-color: #C86926;
+            background-color: #2F353B;
+            color: #CC7722;
             transform: translateY(-2px);
-            box-shadow: 0 8px 24px rgba(224, 122, 47, 0.4);
+            box-shadow: 0 4px 12px rgba(204, 119, 34, 0.3);
         }
 
         .download-icon {
