--- a/john-coburn.html
+++ b/john-coburn.html
@@ -70,21 +70,24 @@
 
         .artist-name {
             font-family: 'Montserrat', sans-serif;
-            font-weight: 900;
+            font-weight: 300;
             font-size: clamp(3rem, 6vw, 5rem);
-            line-height: 1.1;
+            line-height: 1.2;
             color: #E6E6E6;
             margin: 0;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
         }
 
         .film-title {
             font-family: 'Montserrat', sans-serif;
-            font-weight: 400;
-            font-style: italic;
-            font-size: clamp(1.5rem, 3vw, 2.5rem);
+            font-weight: 700;
+            font-size: clamp(2rem, 4vw, 3rem);
+            line-height: 1.3;
             color: #E6E6E6;
-            opacity: 0.9;
             margin: 0;
+            text-transform: none;
+            letter-spacing: normal;
         }
 
         .hero-image {
