Fix Print Resource button color, update logo filter for Burnt Ochre, simplify text

--- a/charles-blackman-resources.html
+++ b/charles-blackman-resources.html
@@ -138,7 +138,7 @@
             display: inline-block;
             padding: 14px 28px;
             background-color: #CC7722;
-            color: #2F353B;
+            color: #E6E6E6;
             text-decoration: none;
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
