--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h1 class="hero-title">The Australian Art Anthology</h1>
                 <h2 class="hero-subtitle">Essential Cinema for the Senior Syllabus.</h2>
                 <p class="hero-description">
-                    Green Turtle Production presents a collection of premium documentaries celebrating the lives and work of three iconic Australian artists. Each film is a time capsule, offering students a rare glimpse into the creative processes that shaped our country's artistic landscape.
+                    Green Turtle Production presents a collection of documentaries celebrating the lives and work of three iconic Australian artists. Each film is a time capsule, offering students a rare glimpse into the creative processes that shaped our country's artistic landscape.
                 </p>
                 <p class="hero-description">
                     As valuable teaching tools, these documentaries spark classroom discussion and deepen understanding of Australia's cultural history.
