Fix logo color globally - apply Burnt Ochre filter with !important to all logo classes

--- a/charles-blackman.html
+++ b/charles-blackman.html
@@ -60,7 +60,7 @@
         .nav-logo {
             height: 50px;
             width: auto;
-            filter: brightness(0) saturate(100%) invert(56%) sepia(68%) saturate(2331%) hue-rotate(346deg) brightness(97%) contrast(92%);
+            filter: brightness(0) saturate(100%) invert(56%) sepia(68%) saturate(2331%) hue-rotate(346deg) brightness(97%) contrast(92%) !important;
             opacity: 1;
             transition: opacity 0.3s ease;
         }
