Rename files and update links: teacher-pack.html to adam-cullen.html, resource-generator.html to adam-cullen-resources.html. Add video player HTML structure to all artist pages.

--- a/index-with-video-player.html
+++ b/index-with-video-player.html
@@ -98,7 +98,7 @@
                             </div>
 
                             <div class="cta-group">
-                                <a href="teacher-pack.html" class="btn-secondary">View Teacher Pack</a>
+                                <a href="adam-cullen.html" class="btn-secondary">View Teacher Pack</a>
                             </div>
                             
                             <div class="curriculum-section">
