--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                         data-video-title="Adam Cullen - Between Two Worlds Trailer">
                                     Watch Trailer
                                 </button>
-                                <a href="teacher-pack.html" class="btn-secondary">View Teacher Pack</a>
+                                <a href="adam-cullen.html" class="btn-secondary">View Teacher Pack</a>
                             </div>
 
                             <!-- Branded Video Player Component (Hidden Initially) -->
