--- a/charles-blackman.html
+++ b/charles-blackman.html
@@ -62,11 +62,8 @@
             width: auto;
             filter: brightness(0) saturate(100%) invert(56%) sepia(68%) saturate(2331%) hue-rotate(346deg) brightness(97%) contrast(92%) !important;
             opacity: 1;
-            transition: opacity 0.3s ease;
-        }
-
-        .nav-logo:hover {
-            opacity: 0.9;
+            pointer-events: none;
+            cursor: default;
         }
 
         .nav-title {
