--- a/john-coburn.html
+++ b/john-coburn.html
@@ -476,6 +476,14 @@
                 padding: 40px 20px;
             }
 
+            .nav-container {
+                padding: 0 20px;
+            }
+
+            .nav-login-link {
+                font-size: 13px;
+            }
+
             .cta-group-hero {
                 flex-direction: column;
                 gap: 12px;
