--- a/success.html
+++ b/success.html
@@ -97,7 +97,7 @@
         }
     </style>
 </head>
-<body>
+<body class="success-page">
     <!-- Header with National Art School Logo -->
     <header class="header">
         <div class="container">
@@ -115,21 +115,28 @@
 
     <main>
         <div class="success-container">
-            <div class="success-icon">✓</div>
-            <h1 class="success-title">Payment Successful</h1>
-            <p class="success-message">
-                Thank you for your enrollment! Your payment has been processed successfully. 
-                Your school now has access to the complete Series 01 Anthology.
-            </p>
-            
-            <div class="success-details">
-                <h3>What's Next?</h3>
-                <p><strong>Access Details:</strong> You will receive an email confirmation with your login credentials and access instructions within 24 hours.</p>
-                <p><strong>License Period:</strong> Your 24-month institutional license begins immediately upon account activation.</p>
-                <p><strong>Support:</strong> If you have any questions, please contact us at admin@greenturtleproductions.com.au</p>
-            </div>
+            <div class="success-card">
+                <div class="success-icon" aria-hidden="true">
+                    <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                        <circle cx="32" cy="32" r="30" stroke="#8F4A4C" stroke-width="1.5"/>
+                        <path d="M20 32 L28 40 L44 24" stroke="#8F4A4C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+                    </svg>
+                </div>
+                <h1 class="success-title">Payment Successful</h1>
+                <p class="success-message">
+                    Thank you for your enrollment! Your payment has been processed successfully.
+                    Your school now has access to the complete Series 01 Anthology.
+                </p>
 
-            <a href="index.html" class="btn-success">Return to Anthology</a>
+                <div class="success-details">
+                    <h3>What's Next?</h3>
+                    <p><strong>Access Details:</strong> You will receive an email confirmation with your login credentials and access instructions within 24 hours.</p>
+                    <p><strong>License Period:</strong> Your 24-month institutional license begins immediately upon account activation.</p>
+                    <p><strong>Support:</strong> If you have any questions, please contact us at admin@greenturtleproductions.com.au</p>
+                </div>
+
+                <a href="index.html" class="btn-success">Return to Anthology</a>
+            </div>
         </div>
     </main>
 
@@ -137,7 +144,7 @@
     <footer class="footer">
         <div class="container">
             <p class="footer-text">
-                © 2024 <a href="https://greenturtleproductions.com.au" style="color: #E07A2F; text-decoration: none;">Green Turtle Productions</a> | 
+                © 2024 <a href="https://greenturtleproductions.com.au" style="color: #8F4A4C; text-decoration: none;">Green Turtle Productions</a> | 
                 The Australian Art Anthology is an Institutional Resource.
             </p>
         </div>
