Strip UI for prestige: Prussian Teal-Ink glaze (0.88), blur(20px) heavy glass, hairline Vermilion borders; remove Departmental Mapping; header transparent → Ink Teal on scroll; hero ghost buttons (Watch Trailer + Preview Resource Pack); pricing card prestige shadow, Montserrat 900 $990; film-footnote Garamond italic
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h1 class="hero-title">The Australian Art Anthology</h1>
                 <div class="hero-cta-group">
                     <a href="#timeline" class="btn-hero btn-hero-primary">Watch Trailer</a>
-                    <a href="#pricing" class="btn-hero btn-hero-secondary">View Resource Overview</a>
+                    <a href="#pricing" class="btn-hero btn-hero-secondary">Preview Resource Pack</a>
                 </div>
                 <div class="hero-description hero-cascade-container" id="hero-paragraph-1">
                     True art is a collective sacrifice. After decades in service to a singular vision, this fugitive history has finally been anchored to the archives. We bring the voices of Blackman, Coburn, and Cullen back from the dead to speak in the low hum of lifelong obsession to the emerging storytellers of your classroom.
@@ -356,34 +356,6 @@
     <section class="pricing-section enrollment-section" id="pricing">
         <div class="enrollment-content-wrap">
         <p class="enrollment-library-trust">The Australian Art Anthology is a verified educational resource currently held in the National Art School Library. Institutional enrollment grants your faculty legal streaming and reproduction rights for all archival materials.</p>
-
-        <!-- Cross-Curriculum Departmental Mapping (Expansion) -->
-        <section class="departmental-mapping" aria-labelledby="dept-mapping-title">
-            <h3 class="departmental-mapping-title" id="dept-mapping-title">Departmental Mapping</h3>
-            <p class="departmental-mapping-intro">One license. Multiple departments. Split the investment across Art, Design & Technology, and Media.</p>
-            <div class="departmental-mapping-grid">
-                <div class="dept-row dept-header">
-                    <span class="dept-cell dept-name">Department</span>
-                    <span class="dept-cell dept-series">Series 01</span>
-                    <span class="dept-cell dept-series">Series 02 (Coming)</span>
-                </div>
-                <div class="dept-row">
-                    <span class="dept-cell dept-name">Visual Arts</span>
-                    <span class="dept-cell dept-content">Cullen, Blackman, Coburn</span>
-                    <span class="dept-cell dept-content">Olley, Boyd</span>
-                </div>
-                <div class="dept-row">
-                    <span class="dept-cell dept-name">Design & Technology / Textiles</span>
-                    <span class="dept-cell dept-content">—</span>
-                    <span class="dept-cell dept-content">Akira Isogawa</span>
-                </div>
-                <div class="dept-row">
-                    <span class="dept-cell dept-name">Media / Film Studies</span>
-                    <span class="dept-cell dept-content">All three films</span>
-                    <span class="dept-cell dept-content">Documentary & design process</span>
-                </div>
-            </div>
-        </section>
 
         <div class="pricing-card enrollment-card">
             <h3 class="pricing-header">Grant Institutional Access</h3>
