--- a/john-coburn-resources.html
+++ b/john-coburn-resources.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Inter:wght@400;500;600&family=Cormorant+Garamond:ital,wght@0,500;0,600;1,500&display=swap" rel="stylesheet">
     <style>
         /* Resource Generator Page Styles */
         * {
@@ -33,7 +33,7 @@
         /* Header */
         .resource-header {
             background-color: #FFFFFF;
-            border-bottom: 3px solid #E07A2F;
+            border-bottom: 3px solid #8F4A4C;
             padding: 24px 40px;
             display: flex;
             justify-content: space-between;
@@ -90,11 +90,11 @@
             padding: 12px 24px;
             background-color: transparent;
             border: none;
-            font-family: 'Montserrat', sans-serif;
+            font-family: 'Cormorant Garamond', Georgia, serif;
             font-weight: 600;
-            font-size: 14px;
+            font-size: 15px;
             text-transform: uppercase;
-            letter-spacing: 0.05em;
+            letter-spacing: 0.08em;
             color: #9CA3AF;
             cursor: pointer;
             border-bottom: 3px solid transparent;
@@ -103,12 +103,12 @@
         }
 
         .tab-button:hover {
-            color: #E07A2F;
+            color: #8F4A4C;
         }
 
         .tab-button.active {
-            color: #E07A2F;
-            border-bottom-color: #E07A2F;
+            color: #8F4A4C;
+            border-bottom-color: #8F4A4C;
         }
 
         .tab-content {
@@ -137,24 +137,24 @@
         .btn-print {
             display: inline-block;
             padding: 14px 28px;
-            background-color: #E07A2F;
+            background-color: #8F4A4C;
             color: #E6E6E6;
             text-decoration: none;
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
             font-size: 1rem;
-            border-radius: 4px;
+            border-radius: 0;
             text-align: center;
             transition: all 0.3s ease;
-            border: 1px solid #E07A2F;
+            border: 1px solid #8F4A4C;
             cursor: pointer;
         }
 
         .btn-print:hover {
             background-color: #2F353B;
-            color: #E07A2F;
+            color: #8F4A4C;
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(204, 119, 34, 0.3);
+            box-shadow: 0 4px 12px rgba(143, 74, 76, 0.3);
         }
 
         /* Section Styles */
@@ -170,7 +170,7 @@
             color: #24292E;
             margin-bottom: 24px;
             padding-bottom: 16px;
-            border-bottom: 3px solid #E07A2F;
+            border-bottom: 3px solid #8F4A4C;
         }
 
         @media print {
@@ -183,7 +183,7 @@
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
             font-size: 24px;
-            color: #E07A2F;
+            color: #8F4A4C;
             margin-bottom: 20px;
             margin-top: 32px;
         }
@@ -213,7 +213,7 @@
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
             font-size: clamp(2rem, 4vw, 3rem);
-            color: #E07A2F;
+            color: #8F4A4C;
             margin-bottom: 48px;
             text-transform: none;
             letter-spacing: normal;
@@ -239,7 +239,7 @@
         }
 
         .key-themes-table th {
-            background-color: #E07A2F;
+            background-color: #8F4A4C;
             color: #FFFFFF;
             padding: 16px;
             text-align: left;
@@ -265,7 +265,7 @@
             margin-bottom: 24px;
             padding: 20px;
             background-color: #F9F9F9;
-            border-left: 4px solid #E07A2F;
+            border-left: 4px solid #8F4A4C;
         }
 
         @media print {
@@ -277,7 +277,7 @@
         .question-number {
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
-            color: #E07A2F;
+            color: #8F4A4C;
             margin-bottom: 8px;
         }
 
@@ -289,7 +289,7 @@
         }
 
         .practical-box {
-            border: 2px solid #E07A2F;
+            border: 2px solid #8F4A4C;
             border-radius: 8px;
             padding: 24px;
             margin: 32px 0;
@@ -306,7 +306,7 @@
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
             font-size: 18px;
-            color: #E07A2F;
+            color: #8F4A4C;
             margin-bottom: 16px;
             text-transform: uppercase;
             letter-spacing: 0.05em;
@@ -325,7 +325,7 @@
         }
 
         .essay-prompt-box {
-            border: 3px solid #E07A2F;
+            border: 3px solid #8F4A4C;
             border-radius: 8px;
             padding: 32px;
             margin: 32px 0;
@@ -342,7 +342,7 @@
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;
             font-size: 16px;
-            color: #E07A2F;
+            color: #8F4A4C;
             margin-bottom: 16px;
             text-transform: uppercase;
             letter-spacing: 0.05em;
