Use karena_gregory.png for Executive Signature photo on landing and artist pages
Made-with: Cursor

--- a/charles-blackman.html
+++ b/charles-blackman.html
@@ -690,7 +690,7 @@
             <h3 class="pedagogy-oversight-title">Pedagogical Oversight</h3>
             <div class="pedagogy-oversight-inner">
                 <div class="pedagogy-oversight-image">
-                    <img src="karena.png" alt="Karena Gregory, Lead Pedagogy Advisor" class="pedagogy-oversight-photo">
+                    <img src="karena_gregory.png" alt="Karena Gregory, Lead Pedagogy Advisor" class="pedagogy-oversight-photo">
                 </div>
                 <div class="pedagogy-oversight-content">
                     <p class="pedagogy-oversight-name">Karena Gregory <span class="pedagogy-oversight-credentials">(M.Ed)</span></p>
