Refine hero copy: shadows, journey, Senior Syllabus, stillness
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -61,13 +61,11 @@
                     <a href="#pricing" class="btn-hero btn-hero-secondary">Preview Resource Pack</a>
                 </div>
                 <div class="hero-description hero-cascade-container" id="hero-paragraph-1">
-                    True art is a collective sacrifice. After decades in service to a singular vision, this fugitive history has finally been anchored to the archives. We bring the voices of Blackman, Coburn, and Cullen back from the dead to speak in the low hum of lifelong obsession to the emerging storytellers of your classroom.
+                    We bring the voices of Blackman, Coburn, and Cullen out of the shadows to speak to the emerging storytellers of your classroom.
 
-                    Narrated by Miranda Otto, Marcus Graham, and Kamahl, this never-before-seen footage is a raw, cinematic deep dive into Australian art.
+                    Narrated by Miranda Otto, Marcus Graham, and Kamahl, this never-before-seen footage is a raw, cinematic journey into Australian art.
 
-                    These tapes are the missing link for the Senior Syllabus—the precursor grit required to sustain our national identity. They represent the precise moment where the labour ends and the legacy begins.
-
-                    Your library is the final destination for this work. By securing this anthology, you gift the next generation a perspective on their culture that is far too easily overlooked.
+                    Essential for the Senior Syllabus, these tapes represent the precise moment where the labour ends and the legacy begins.
 
                     We let the chaos of the process breathe, and allow the student to stand in the profound stillness of a presence that asks nothing more than to be seen.
                 </div>
@@ -352,6 +350,24 @@
         </div>
     </main>
 
+    <!-- Executive Signature (Karena Gregory) — trust before pricing -->
+    <div class="container pedagogy-oversight-wrap">
+        <hr class="ink-divider">
+        <section class="pedagogy-oversight">
+            <h3 class="pedagogy-oversight-title">Pedagogical Oversight</h3>
+            <div class="pedagogy-oversight-inner">
+                <div class="pedagogy-oversight-image">
+                    <img src="karena_gregory.png" alt="Karena Gregory, Lead Pedagogy Advisor" class="pedagogy-oversight-photo">
+                </div>
+                <div class="pedagogy-oversight-content">
+                    <p class="pedagogy-oversight-name">Karena Gregory <span class="pedagogy-oversight-credentials">(M.Ed)</span></p>
+                    <p class="pedagogy-oversight-role">Lead Pedagogy Advisor | Retired Principal & Visual Arts Specialist</p>
+                    <blockquote class="pedagogy-oversight-quote">"As a former Principal and Art Teacher, I've seen how primary sources can transform a classroom. This anthology is a meticulously mapped curriculum tool that meets the highest standards of Australian art education."</blockquote>
+                </div>
+            </div>
+        </section>
+    </div>
+
     <!-- Institutional Enrollment Section -->
     <section class="pricing-section enrollment-section" id="pricing">
         <div class="enrollment-content-wrap">
@@ -384,24 +400,6 @@
         </div>
         </div>
     </section>
-
-    <!-- Executive Signature (Karena Gregory) — just above footer -->
-    <div class="container">
-        <hr class="ink-divider">
-        <section class="pedagogy-oversight">
-            <h3 class="pedagogy-oversight-title">Pedagogical Oversight</h3>
-            <div class="pedagogy-oversight-inner">
-                <div class="pedagogy-oversight-image">
-                    <img src="karena_gregory.png" alt="Karena Gregory, Lead Pedagogy Advisor" class="pedagogy-oversight-photo">
-                </div>
-                <div class="pedagogy-oversight-content">
-                    <p class="pedagogy-oversight-name">Karena Gregory <span class="pedagogy-oversight-credentials">(M.Ed)</span></p>
-                    <p class="pedagogy-oversight-role">Lead Pedagogy Advisor | Retired Principal & Visual Arts Specialist</p>
-                    <blockquote class="pedagogy-oversight-quote">"As a former Principal and Art Teacher, I've seen how primary sources can transform a classroom. This anthology is a meticulously mapped curriculum tool that meets the highest standards of Australian art education."</blockquote>
-                </div>
-            </div>
-        </section>
-    </div>
 
     <!-- Footer -->
     <footer class="footer">
