Tighten hero-to-timeline gap; plain hero paragraphs, standard styling
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <div class="hero-content">
                 <h1 class="hero-title">The Australian Art Anthology</h1>
                 <div class="hero-description hero-cascade-container">
-                    <p class="hero-text-stanza">We bring the voices of Blackman, Coburn, and Cullen out of the shadows to speak to the emerging storytellers of your classroom.</p>
-                    <p class="hero-text-stanza">Narrated by Miranda Otto, Marcus Graham, and Kamahl, this never-before-seen footage is a raw, cinematic journey into Australian art.</p>
-                    <p class="hero-text-stanza">Essential for the Senior Syllabus, these tapes represent the precise moment where the labour ends and the legacy begins.</p>
+                    <p>We bring the voices of Blackman, Coburn, and Cullen out of the shadows to speak to the emerging storytellers of your classroom.</p>
+                    <p>Narrated by Miranda Otto, Marcus Graham, and Kamahl, this never-before-seen footage is a raw, cinematic journey into Australian art.</p>
+                    <p>Essential for the Senior Syllabus, these tapes represent the precise moment where the labour ends and the legacy begins.</p>
                 </div>
                 <div class="hero-cta-group">
                     <a href="#timeline" class="btn-hero btn-hero-primary">Watch Trailer</a>
